[package]
name = "antarez-s3-storage"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Generic Rust library for S3-compatible object storage with pre-signed URL support"
license = "MIT"

[dependencies]
aws-config       = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3       = "1"
aws-smithy-runtime-api = "1"
thiserror        = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
tokio            = { version = "1", features = ["full"] }
tracing          = "0.1"
humantime-serde  = "1"
chrono           = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[[example]]
name = "basic_usage"
